--- a/css/main.css
+++ b/css/main.css
@@ -55,7 +55,7 @@ body{
 
 }
 .third .container1{
-    width: 980px;
+    max-width: 980px;
     margin: 0 auto
 }
 
@@ -111,14 +111,5 @@ body{
 }
 
 
-@media (min-width: 768px) and (max-width: 991px){
 
-    .container2 {
-        width: 100%;
-        padding-right: 15px;
-        padding-left: 15px;
-        margin-right: auto;
-        margin-left: auto;
-        max-width: 100%
-    }
 }
